<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_login"
    android:background="@color/signinandloginpage"
    tools:context="com.light.niepaper.Activities.Authentication.LoginActivity">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/emaillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableEnd="@android:drawable/ic_dialog_email"
            android:drawableRight="@android:drawable/ic_dialog_email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="#ffff"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/textandeditview"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="39dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0">

        <EditText
            android:id="@+id/passwordlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:backgroundTint="#ffff"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="#ffff" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="247dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="69dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="58dp"
        android:background="@color/colorAccent"
        android:fontFamily="serif"
        android:onClick="onLogin"
        android:text="@string/login_button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.005" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="334dp"
        android:onClick="onsignup"
        android:text="@string/signup_login"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
